Updated Login and Account Functionality:
- Adjusted UI Layout for SignUp, Activity, and Account Fragments
- Added functionality for changing username and password
- Implemented forgot password

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -34,7 +34,7 @@
     </LinearLayout>
 
     <EditText
-        android:id="@+id/editTextFirstName"
+        android:id="@+id/editTextName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
