--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -32,7 +32,17 @@
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/accountInfo"
+                android:id="@+id/emailInfo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:text=""
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:visibility="invisible" />
+            <TextView
+                android:id="@+id/usernameInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
@@ -43,9 +53,53 @@
                 android:visibility="invisible" />
 
             <Button
+                android:id="@+id/buttonInitiateUsernameChange"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="15dp"
+                android:layout_weight="1"
+                android:text="Change Username"
+                android:textSize="16sp"
+                android:visibility="invisible" />
+
+            <EditText
+                android:id="@+id/newUsernameInput"
+                android:textColorHint="@color/lightGray"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:hint="New Username"
+                android:padding="16dp"
+                android:textColor="#FFFFFF"
+                android:visibility="gone" />
+
+            <EditText
+                android:id="@+id/confirmNewUsernameInput"
+                android:textColorHint="@color/lightGray"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:hint="Confirm Username"
+                android:padding="16dp"
+                android:textColor="#FFFFFF"
+                android:visibility="gone" />
+
+            <Button
+                android:id="@+id/buttonUsernameChange"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="15dp"
+                android:layout_weight="1"
+                android:text="Confirm Change Username"
+                android:textSize="16sp"
+                android:visibility="gone" />
+
+            <Button
                 android:id="@+id/buttonInitiatePasswordReset"
                 android:layout_width="200dp"
-                android:layout_height="20dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="15dp"
                 android:layout_weight="1"
@@ -55,6 +109,7 @@
 
             <EditText
                 android:id="@+id/oldPasswordInput"
+                android:textColorHint="@color/lightGray"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -65,6 +120,7 @@
 
             <EditText
                 android:id="@+id/newPasswordInput"
+                android:textColorHint="@color/lightGray"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -75,6 +131,7 @@
 
             <EditText
                 android:id="@+id/confirmNewPasswordInput"
+                android:textColorHint="@color/lightGray"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -86,7 +143,7 @@
             <Button
                 android:id="@+id/buttonResetPassword"
                 android:layout_width="200dp"
-                android:layout_height="20dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="15dp"
                 android:layout_weight="1"
@@ -99,7 +156,7 @@
         <Button
             android:id="@+id/buttonAccountInfo"
             android:layout_width="200dp"
-            android:layout_height="20dp"
+            android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
