--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,11 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="Account"
-        android:icon="@drawable/baseline_person_24"
-        android:id="@+id/account" />
+        android:id="@+id/navigation_home"
+        android:icon="@drawable/baseline_home_24"
+        android:title="Home" />
     <item
-        android:title="Settings"
+        android:id="@+id/account"
+        android:icon="@drawable/baseline_person_24"
+        android:title="Account" />
+    <item
+        android:id="@+id/settings"
         android:icon="@drawable/baseline_settings_24"
-        android:id="@+id/settings" />
+        android:title="Settings" />
 </menu>
