--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -6,6 +6,10 @@
         android:icon="@drawable/baseline_home_24"
         android:title="Home" />
     <item
+        android:id="@+id/reports"
+        android:icon="@drawable/baseline_calendar_month_24"
+        android:title="Reports" />
+    <item
         android:id="@+id/account"
         android:icon="@drawable/baseline_person_24"
         android:title="Account" />
