--- a/app/src/main/res/layout/list_expenses.xml
+++ b/app/src/main/res/layout/list_expenses.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:cardCornerRadius="4dp"
         app:cardUseCompatPadding="true">
 
