--- a/app/src/main/res/layout/list_expenses.xml
+++ b/app/src/main/res/layout/list_expenses.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="4dp"
         app:cardUseCompatPadding="true">
 
@@ -43,14 +43,30 @@
                     android:textSize="15sp"
                     android:text="Description" />
 
-                <TextView
-                    android:id="@+id/card_amount"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textStyle="bold"
-                    android:textSize="25sp"
-                    android:text="Amount" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/card_amount"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@color/black"
+                        android:textStyle="bold"
+                        android:textSize="25sp"
+                        android:text="Amount" />
+
+                    <TextView
+                        android:id="@+id/card_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/black"
+                        android:textSize="15sp"
+                        android:text="Date"
+                        android:gravity="right"/>
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/card_category"
@@ -59,14 +75,6 @@
                     android:textColor="@color/black"
                     android:textSize="15sp"
                     android:text="Category" />
-
-                <TextView
-                    android:id="@+id/card_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    android:textSize="15sp"
-                    android:text="Date" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
