--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/account"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@android:color/background_light"
+    android:orientation="vertical"
     tools:context=".AccountFragment">
 
     <TextView
@@ -16,7 +16,7 @@
         android:text="Account"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"/>
 
     <Button
@@ -26,46 +26,58 @@
         android:text="Account Info"
         android:textSize="16sp"
         android:textColor="@android:color/white"
+        android:layout_below="@id/AccountTitle"
         android:layout_marginBottom="8dp"/>
 
-    <TextView
-        android:id="@+id/usernameInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Username: "
-        android:textSize="20sp"
-        android:textColor="@android:color/black"
-        android:visibility="invisible"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/emailInfo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email: "
-        android:textSize="20sp"
-        android:textColor="@android:color/black"
-        android:visibility="invisible"
-        android:textStyle="bold"/>
-
-    <Button
-        android:id="@+id/buttonInitiateUsernameChange"
+    <RelativeLayout
+        android:id="@+id/relativelayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Change Username"
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
-        android:layout_marginBottom="8dp"
-        android:visibility="invisible" />
+        android:layout_margin="16dp"
+        android:background="@drawable/rounded_border_bg"
+        android:visibility="invisible"
+        android:layout_below="@id/buttonAccountInfo">
 
-    <Button
-        android:id="@+id/buttonInitiatePasswordReset"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Reset Password"
-        android:textSize="16sp"
-        android:textColor="@android:color/white"
-        android:layout_marginBottom="8dp"
-        android:visibility="invisible" />
+        <TextView
+            android:id="@+id/emailInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Email: "
+            android:textSize="22sp"
+            android:textColor="@android:color/black"
+            android:padding="16dp"/>
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/usernameInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Username:"
+            android:textSize="22sp"
+            android:textColor="@android:color/black"
+            android:padding="16dp"
+            android:layout_below="@id/emailInfo"/>
+
+        <Button
+            android:id="@+id/buttonInitiateUsernameChange"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Change Username"
+            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:layout_below="@id/usernameInfo"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="16dp"/>
+
+        <Button
+            android:id="@+id/buttonInitiatePasswordReset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reset Password"
+            android:textSize="15sp"
+            android:textColor="@android:color/white"
+            android:layout_below="@id/usernameInfo"
+            android:layout_toEndOf="@id/buttonInitiateUsernameChange"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"/>
+    </RelativeLayout>
+</RelativeLayout>
