--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -24,7 +24,8 @@
         android:id="@+id/descriptionTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/text1">
+        android:layout_below="@id/text1"
+        android:paddingVertical="10dp">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/description"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
@@ -40,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/descriptionTextLayout"
-        android:paddingVertical="16dp">
+        android:paddingVertical="10dp">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/amount"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
@@ -56,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/amountTextLayout"
-        android:paddingVertical="16dp">
+        android:paddingVertical="10dp">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/category"
             style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
@@ -72,13 +73,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/categoryTextLayout"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="10dp">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/dateTextLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="16dp">
+            android:paddingVertical="10dp">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/date"
                 style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
